WIP - Web interface

--- a/trinity_web/www/index.html
+++ b/trinity_web/www/index.html
@@ -6,9 +6,14 @@
 		<meta charset="UTF-8" />
 		<title>Trinity</title>
 		<link rel="stylesheet" href="style.css" />
+		<script src="main.js"></script>
 	</head>
 
 	<body>
 		<h1>Trinity</h1>
+		<div>
+			<input type="button" id="wifi-networks-button" onclick="show_networks()" value="Show WiFi Networks"></input>
+			<div class="main" id="main"></div>
+		</div>
 	</body>
 </html>
