Updated web app homepage

--- a/trinity_web/www/index.html
+++ b/trinity_web/www/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang=fr>
+<html>
 
   <head>
 	<meta charset="UTF-8" />
@@ -14,7 +14,7 @@
 	<div>
 	  <div>
 		<input type="button" id="wifi-networks-button" onclick="show_networks()" value="Show WiFi Networks"></input>
-		<input type="button" id="monitor-enable-button" onclick="monitor_enable()" value="Monitor Mode On"></input>
+		<input type="button" id="monitor-enable-button" onclick="monitor_enable()" value="Monitor Mode Enable"></input>
 		<input type="button" id="monitor-disable-button" onclick="monitor_disable()" value="Monitor Mode Disable"></input>
 		<input type="button" id="show-network-interfaces" onclick="show_network_interfaces()" value="Show Network Interfaces"></input>
 	  </div>
